added more content in js and add some css styles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <h1>Weather</h1>
-
-    <div class="enter-city">
+    <main>
+    <main class="enter-city">
+        <h1>Weather</h1>
         <form>
             <div class="form-flex">
                 <label for="name" class="sr-only">Enter City Name</label>
@@ -21,10 +21,12 @@
             </div>
             <button type="submit">Submit</button>
         </form>
-    </div>
+    </main>
 
     <!-- dynamic content goes in here -->
     <div class="weather-data"></div>
+
+    </main>
 
 
 
