added media queries and footer completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="temp-icon"></div>
                     <div class="weather-conditions"></div>
                 </div>
-                
+
                 <div class="form-contact-container">
 
                     <form>
@@ -28,27 +28,29 @@
                         <label for="city">Search Location</label>
                         <!-- <i class="fas fa-search"></i> -->
                         <input type="text" name="city" id="city" placeholder="Enter City" required>
+                        <span class="error-message">No matching city found!</span>
                     </form>
 
-                    <!-- <div class="designer-info">
-                        <p>By Amy Bradford & Harman Dhamija <a href="https://github.com/harman-amy"><i class="fab fa-github"></i></a>
-                        </p>
-                        <p>Created at<a href="https://junocollege.com/">Juno College</a></p>
-                    </div> -->
                 </div>
 
             </main>
 
             <footer>
-                
+                <div class="designer-info">
+                    <p>Created at<a href="https://junocollege.com/">Juno College of Technology</a></p>
+                </div>
 
-                <!-- <div class="juno-logo">
-                    <p>>_</p>
-                </div> -->
+                <div class="github-icon">
+                    <a href="https://github.com/harman-amy"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/harman-amy"><i class="fab fa-linkedin"></i></a>
+
+                </div>
+
             </footer>
         </div>
     </header>
 
     <script src="./script.js"></script>
 </body>
+
 </html>
