Fixed error handling and animations along with code organizing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="wrapper">
             <main>
-                <div class="flex-container scale">
+                <div class="flex-container">
                     <div class="weather"></div>
                     <div class="temp-icon"></div>
                     <div class="weather-conditions"></div>
