Final changes made and app is ready

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <div class="flex-container">
                 <div class="weather"></div>
-                <div class="temp-icon"></div>
+                <div class="temperature"></div>
                 <div class="weather-conditions"></div>
             </div>
 
@@ -27,22 +27,17 @@
                     <span class="error-message">No matching city found!</span>
                 </form>
             </div>
-
         </main>
 
-
         <footer>
-
             <div class="juno-college">
                 <p>Created at<a href="https://junocollege.com/">Juno College of Technology</a></p>
             </div>
 
             <div class="contact-info">
-                <a href="https://github.com/harman-amy"><i class="fab fa-github"></i></a>
-                <a href="https://github.com/harman-amy"><i class="fab fa-linkedin"></i></a>
-
+                <a href="https://github.com/harman-amy"><i class="fab fa-github" aria-hidden="true"></i><span class="sr-only">Link to Github profile</span></a>
+                <a href="https://www.linkedin.com/" ><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Link to linkedin page</span></a>
             </div>
-
         </footer>
     </div>
 
