--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <main>
             <div class="flex-container">
-                <div class="weather"></div>
+                <div class="city-div"></div>
                 <div class="temperature"></div>
                 <div class="weather-conditions"></div>
             </div>
@@ -36,7 +36,7 @@
 
             <div class="contact-info">
                 <a href="https://github.com/harman-amy"><i class="fab fa-github" aria-hidden="true"></i><span class="sr-only">Link to Github profile</span></a>
-                <a href="https://www.linkedin.com/" ><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Link to linkedin page</span></a>
+                <a href="https://www.linkedin.com/" ><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Link to Linkedin page</span></a>
             </div>
         </footer>
     </div>
