modified css stlyes

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
                 <div class="weather-conditions"></div>
             </div>
 
-            <div class="form-contact-container">
+            <div class="form-container">
                 <form>
                     <label for="city">Search Location</label>
                     <input type="text" name="city" id="city" placeholder="Enter City" required>
-                    <span class="error-message">No matching city found!</span>
+                    <div class="error-message"><p>No matching city found!</p></div>
                 </form>
             </div>
         </main>
 
         <footer>
             <div class="juno-college">
-                <p>Created at<a href="https://junocollege.com/">Juno College of Technology</a></p>
+                <p>created @<a href="https://junocollege.com/" target="blank">Juno College of Technology</a></p>
             </div>
 
             <div class="contact-info">
-                <a href="https://github.com/harman-amy"><i class="fab fa-github" aria-hidden="true"></i><span class="sr-only">Link to Github profile</span></a>
-                <a href="https://www.linkedin.com/" ><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Link to Linkedin page</span></a>
+                <a href="https://github.com/harman-amy" target="blank"><i class="fab fa-github" aria-hidden="true" ></i><span class="sr-only">Link to Github profile</span></a>
+                <a href="https://www.linkedin.com/in/harman-dhamija-768514103/" target="blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Link to Linkedin page</span></a>
             </div>
         </footer>
     </div>
